--- a/views/index.ejs
+++ b/views/index.ejs
@@ -235,7 +235,7 @@
   <form id="mainForm" onsubmit="return false;">
     <input type="text" id="videoUrl" placeholder="Paste TikTok video link here..." required />
     <button type="button" class="paste-btn" onclick="pasteLink()">Paste</button>
-    <button type="button" class="fetch-btn" onclick="fetchLinks()">Fetch Links</button>
+    <button type="button" class="fetch-btn" onclick="fetchLinks()">Download</button>
   </form>
 
   <div id="options"></div>
@@ -271,7 +271,7 @@
         How do I paste the link and download?
       </button>
       <div id="faq2" class="accordion-content" role="region" aria-labelledby="faq2-button">
-        <p>Paste the copied URL into the input box above, click “Fetch Links” to get download options, then click a button to start downloading.</p>
+        <p>Paste the copied URL into the input box above, click “Download” to get download options, then click a button to start downloading.</p>
       </div>
     </div>
 
